fixed overflow on search page

--- a/assets/css/searchResultStyle.css
+++ b/assets/css/searchResultStyle.css
@@ -37,7 +37,6 @@
 .genre_container {
     flex-wrap: wrap;
     margin-bottom: 8rem;
-    overflow-x: hidden;
 }
 section {
     width: 100%;
